attempt2 fixing white space on side bar

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -123,7 +123,6 @@
 
 .author__bio {
   margin: 0;
-  white-space: pre-wrap;
 
   @include breakpoint($large) {
     margin-top: 10px;
